--- a/htdocs/mapstyle.css
+++ b/htdocs/mapstyle.css
@@ -1,19 +1,19 @@
-/*ƒfƒtƒHƒ‹ƒg‚Ìİ’è*/
+/*ï¿½fï¿½tï¿½Hï¿½ï¿½ï¿½gï¿½Ìİ’ï¿½*/
 *{margin:0;padding:0}
-/*ƒwƒbƒ_‚Ìİ’è*/
+/*ï¿½wï¿½bï¿½_ï¿½Ìİ’ï¿½*/
 div#header
 
 {
-/*ƒ{ƒbƒNƒX‚Ìİ’è*/
-padding: 0 0 0 2%;/*˜g“à—]”’*//*ã‰E‰º¶‚Ì—]”’*/
+/*ï¿½{ï¿½bï¿½Nï¿½Xï¿½Ìİ’ï¿½*/
+padding: 0 0 0 2%;/*ï¿½gï¿½ï¿½]ï¿½ï¿½*//*ï¿½ï¿½Eï¿½ï¿½ï¿½ï¿½ï¿½Ì—]ï¿½ï¿½*/
 background:#3f3f47;
 color: #f03351;
 }
 
-/*ƒiƒr‚Ìİ’è*/
+/*ï¿½iï¿½rï¿½Ìİ’ï¿½*/
 div#navi
 {
-/*ƒ{ƒbƒNƒX‚Ìİ’è*/
-padding: 0 0 0 2%;/*˜g“à—]”’*//*ã‰E‰º¶‚Ì—]”’*/
-float:center;/*‰ñ‚è‚İ*//*¶Šñ‚¹*/
+/*ï¿½{ï¿½bï¿½Nï¿½Xï¿½Ìİ’ï¿½*/
+padding: 0 0 0 2%;/*ï¿½gï¿½ï¿½]ï¿½ï¿½*//*ï¿½ï¿½Eï¿½ï¿½ï¿½ï¿½ï¿½Ì—]ï¿½ï¿½*/
+float:center;/*ï¿½ï¿½èï¿½ï¿½*//*ï¿½ï¿½ï¿½ï¿½*/
 }
