--- a/htdocs/ra-men.css
+++ b/htdocs/ra-men.css
@@ -2,7 +2,8 @@
 *{margin:0;padding:0}
 
 body{
-	background:#f3f3e7;
+	background-image: url("img/haikei.png");
+	background-size:cover;
 }
 /*ヘッダの設定*/
 div#header{
